# MyInvencibleLibrary

CLIENTEprueba/: Archivo.h  CMakeLists.txt  Cliente.h  Imagen.cpp  Imagen.h  Lista.h  Nodo.h  Paridad.h  Pixel.h  main.cpp
Cliente/: CMakeLists.txt
MetadataDB/: CMakeLists.txt
MyIDE/: CMakeLists.txt
MyInvencibleLibrary/: Archivo.h  ArchivoBinario.h  ArchivoTexto.h  CMakeLists.txt  Disco.h  Imagen.cpp  Imagen.h  Lista.h  Nodo.h  Paridad.h  Paridad2.h  Pixel.h  RAID_5.h  Server.h  Servidor.h  main.cpp
MyInvencibleLibrary/DISCO1/: color.txt  homero.txt  pixels.txt  pixelsParte1.txt  pixelsParte2.txt  pixelsParte3.txt
MyInvencibleLibrary/DISCO2/: 0030.txt  0072.txt
MyInvencibleLibrary/DISCO3/: 0031.txt  0063.txt  0073.txt
MyInvencibleLibrary/Imagenes de prueba/: agua.ppm  gris.ppm  homero.ppm  montana.ppm  nieve.ppm  paisaje.ppm  perro.ppm  pixels.ppm  playa.ppm
MyInvencibleLibrary/MyInvencibleLibrary/: Archivo.h  BinDec.h  CMakeLists.txt  Compresion.h  Imagen.cpp  Imagen.h  Redundancia.h  main.cpp
ServerLibrary/: CMakeLists.txt
ServerLibrarySocket/src/server/: BDDirector.java  ConeccionC.java  Libreria.java  Main.java  RAID.java  ServerShell.java
